# active_anomaly_detection

./: active_ad.ipynb  autoencoder.pkl  pyproject.toml  results_imbalanced.csv  results_without_resample.csv  train_lstm.ipynb
lstmad/: lstmae.py  vrae.py
