[tool.poetry]
name = "lstm-ad"
version = "0.1.0"
description = ""
authors = ["Tomas Sabata"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.0"
torchvision = "^0.6.0"
jupyterlab = "^2.1.2"
scikit-learn = "^0.23.0"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
numpy = "^1.18.4"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
